fix mockups on mobile

--- a/src/components/common/Modal/ArtworkGallery/ArtworkGallery.module.scss
+++ b/src/components/common/Modal/ArtworkGallery/ArtworkGallery.module.scss
@@ -48,4 +48,8 @@
     object-fit: cover;
 
   }
+  @media (max-width: 900px) {
+    display: flex;
+    flex-direction: column;
+  }
 }
